# procedural-wallpapers-rs

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  Makefile  README.md
.github/workflows/: cmake.yml  rust.yml
procedural_wallpapers/: Cargo.toml
procedural_wallpapers/src/: main.rs
src/: clouds.cpp  fern.cpp  flow.cpp  islands.cpp  landscape.c  landscape.cpp  lightning.cpp  main.rs  marrowlike.cpp  mesh.cpp  nearestpoint.cpp  pixelstars.c  pixelstars.cpp  tangles.c  tangles.cpp  water.c  water.cpp  wood.cpp  zebra.cpp
src/algorithms/: cellularone.rs  clouds.rs  flow.rs  islands.rs  lightning.rs  mod.rs  nearestpoint.rs  randompatterns.rs  squares.rs  squaresonedirection.rs  tangles.rs
src/layers/: mod.rs  squareslayer.rs
src/lib/: BytesImage.cpp  BytesImage.h  basicdrawing.cpp  basicdrawing.h  main.c  main.cpp  main.h  perlin.c  perlin.cpp  perlin.h  randomcomplex.cpp  randomcomplex.h
src/patterns/: mod.rs  pattern.rs
src/utils/: mod.rs  perlin.rs
wallpapers/: Cargo.toml
wallpapers/src/: lib.rs
wallpapers/src/algorithms/: cellularone.rs  clouds.rs  flow.rs  islands.rs  lightning.rs  mod.rs  nearestpoint.rs  randompatterns.rs  squaresonedirection.rs  tangles.rs
wallpapers/src/patterns/: pattern.rs
wallpapers/src/utils/: mod.rs  perlin.rs
